Mobile- stop meta container from wrapping text onto the next line

--- a/static/css/messages.css
+++ b/static/css/messages.css
@@ -204,6 +204,8 @@
     flex-direction: row;
     font-size: 0.75rem;
     align-items: center;
+    white-space: nowrap;
+    width: 100%;
     color: #bbb;
 }
 
